--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,17 @@ body {
     font-family: 'Reem Kufi'
 }
 
+#color {
+    width: 100%;
+    height: 100%;
+    /* cursor: pointer; */
+    /* box-shadow: 0px 0px 15px #CCC; */
+    /* border-radius: 10px; */
+    margin: 0 auto;
+    background-color: yellow;
+    transition: background-color .2s ease-out;
+}
+
 .ari-navbar {
     float: right;
     padding: 10px;
